<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_back"
tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/dimens_24dp"
        android:layout_marginLeft="@dimen/dimens_24dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/dimens_30sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/today_will_be_a_great_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_will_be_great"
            android:textSize="@dimen/dimens_15sp"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LoginEmail"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/text_email"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPassword"
            android:singleLine="true"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="Password"
            android:textColorHint="@color/colorWhite"
            android:drawableRight="@drawable/ic_lock_black_24dp"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginRemember_me"
            android:text="Remember me"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:textSize="@dimen/dimens_14sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Login"
            android:text="@string/text_login"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/dimens_14sp"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:layout_marginRight="@dimen/dimens_14sp" />
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
       android:backgroundTint="#0101ff"
        app:itemTextColor="@color/colorWhite"
        app:itemIconTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation" />

</RelativeLayout>