<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:background="@drawable/admin_background">

  <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/textId"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/id"
            android:textAlignment="viewEnd"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textcolon0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/textFirstName"
            android:text=":"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textcolon1"
            android:text="@string/id"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textFirstName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textId"
            android:gravity="end"
            android:text="@string/first_name"
            android:textAlignment="viewEnd"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textcolon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textcolon0"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/textFirstName"
            android:text=":"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewId"
            android:layout_toRightOf="@+id/textcolon1"
            android:text="@string/first_name"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textLastName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textFirstName"
            android:gravity="end"
            android:text="@string/last_name"
            android:textAlignment="viewEnd"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textColon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textcolon1"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/textLastName"
            android:text=":"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewFirstName"
            android:layout_toRightOf="@+id/textColon2"
            android:text="last name"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLastName"
            android:gravity="end"
            android:text="@string/enter_email_id"
            android:textAlignment="viewEnd"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textColon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textColon2"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/textEmail"
            android:text=":"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textViewEmailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLastName"
            android:layout_toRightOf="@+id/textColon3"
            android:text="@string/email_id"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textpassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEmail"
            android:gravity="end"
            android:text="@string/password"
            android:textAlignment="viewEnd"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textColon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textColon3"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/textpassword"
            android:text=":"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewEmailId"
            android:layout_toRightOf="@+id/textColon4"
            android:text="Password"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textMobileNo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textpassword"
            android:gravity="end"
            android:text="Mobile No"
            android:textAlignment="viewEnd"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textColon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textColon4"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/textMobileNo"
            android:text=":"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textViewMobileNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPassword"
            android:layout_toRightOf="@+id/textColon5"
            android:text="Mobile No"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textDob"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textMobileNo"
            android:gravity="end"
            android:text="DOB"
            android:textAlignment="viewEnd"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textColon6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textMobileNo"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/textDob"
            android:text=":"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textViewDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMobileNo"
            android:layout_toRightOf="@+id/textColon6"
            android:text="DOB"
            android:textColor="#ffffff" />


    </RelativeLayout>


</RelativeLayout>